# RAG-Fastembed

./: .env  .gitignore  README.md  pyproject.toml
notebooks/data/embeddings/: embedding_1.npy  embedding_2.npy  embedding_3.npy  embedding_4.npy  embedding_5.npy  embedding_6.npy
notebooks/data/extracted_chapters/: chapter_01.txt  chapter_02.txt  chapter_03.txt  chapter_04.txt  chapter_05.txt  chapter_06.txt
