[tool.poetry]
name = "diginerve-ai"
version = "0.1.0"
description = "Textbook Intelligence for DigiNerve"
authors = ["syedzaidi-kiwi <syed.asad@kiwitech.com>"]
license = "Closed"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
ebooklib = "^0.18"
html2text = "^2024.2.26"
llama-index = "^0.10.26"
llama-parse = "^0.4.0"
fastembed = "^0.2.6"
qdrant-client = "^1.8.2"
langchain = "^0.1.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
